--- a/.gitignore
+++ b/.gitignore
@@ -18,10 +18,8 @@ migrate_working_dir/
 *.iws
 .idea/
 
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
+# VS Code (optional)
+/.vscode/
 
 # Flutter/Dart/Pub related
 **/doc/api/
@@ -31,7 +29,11 @@ migrate_working_dir/
 .flutter-plugins-dependencies
 .pub-cache/
 .pub/
+
+# Ignore all build except build/web
 /build/
+!build/web/
+!build/web/**
 
 # Symbolication related
 app.*.symbols
@@ -39,7 +41,7 @@ app.*.symbols
 # Obfuscation related
 app.*.map.json
 
-# Android Studio will place build artifacts here
+# Android Studio artifacts
 /android/app/debug
 /android/app/profile
 /android/app/release
